objects/Case.object
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TypeDetail__c</fullName>
        <label>Type Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Metadata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Cloud</fullName>
                </value>
                <value>
                    <fullName>Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Revenue Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Service_Cloud_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>Service Cloud Cases</label>
    </listViews>
    <listViews>
        <fullName>Approved_Change_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>TypeDetail__c</columns>
        <columns>Application__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Submitter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Change Request</value>
        </filters>
        <label>Approved Change Requests</label>
    </listViews>
</CustomObject>